# QuantumHackathon26

./: README.md  pyproject.toml  raw_data_comparison.txt  run_m5.ipynb  test_main.py
.github/workflows/: python-tests.yml
optimized/: joint_estimator.py  joint_estimator_grid.py  optimized_tuneup.py
